--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "mammoth": "^1.11.0",
     "next": "16.1.6",
+    "pdf-parse": "^1.1.1",
     "pdf2json": "^4.0.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
